@@ -1,4 +1,4 @@
-@set UPDATED 5 May 2001
+@set UPDATED 6 May 2001
 @set UPDATED-MONTH May 2001
 @set EDITION 1.4e
 @set VERSION 1.4e
