@@ -1,5 +1,15 @@
 2001-05-06  Tom Tromey  <tromey@redhat.com>
 
+	For PR automake/160:
+	* tests/Makefile.am (TESTS): Added subobj5.test and subobj6.test.
+	(XFAIL_TESTS): Added subobj6.test.
+	* tests/subobj6.test: New file.
+
+	* automake.texi (Uniform): Mention dist_, nodist_, and nobase_.
+	(Top level): Don't mention `flat'.
+	(Extending): Likewise.
+	(User Variables): New node.
+
 	* distdir.am (distdir): Make subdirectory for each file.
 	Fixes test subobj5.test.
 
